avoid stretching of popup image

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ img
     margin: auto;
     height: 90vh;
     width: 90vw;
+    object-fit: contain;
 }
 
 #closeButton
